test/regress/cov3-annotate-dup-date.test
; Test error for duplicate date annotation
; Covers annotate.cc (duplicate date check)

2024/01/01 Test
    Assets:Brokerage    10 AAPL [2024/01/01] [2024/02/01]
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL [2024/01/01] [2024/02/01]
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Commodity specifies more than one date
end test
